--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simply-pub-sub",
   "version": "1.0.0",
-  "description": "A simple pub sub system.",
+  "description": "A simple pub/sub system.",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
