--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "simply-pub-sub",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "A simple pub/sub system.",
-  "main": "src/publisher.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
